k8s/furport-monitor/cloudprober.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudprober
spec:
  selector:
    matchLabels:
      app: cloudprober
  template:
    metadata:
      labels:
        app: cloudprober
    spec:
      containers:
      - name: cloudprober
        image: ghcr.io/cloudprober/cloudprober:v0.13.7
        ports:
        - containerPort: 9313
        volumeMounts:
          - name: config
            mountPath: /etc/cloudprober.cfg
            subPath: cloudprober.cfg
      volumes:
      - name: config
        configMap:
          name: cloudprober
---
apiVersion: v1
kind: Service
metadata:
  name: cloudprober
spec:
  selector:
    app: cloudprober
  ports:
  - port: 9313
    targetPort: 9313
