k8s/furport-monitor/prometheus.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: furport-monitor-prometheus
spec:
  selector:
    matchLabels:
      app: furport-monitor-prometheus
  serviceName: furport-monitor-prometheus
  replicas: 1
  template:
    metadata:
      labels:
        app: furport-monitor-prometheus
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: furport-monitor-prometheus
        image: prom/prometheus:v2.54.1
        args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus
        - --storage.tsdb.retention.time=15d
        # ボリュームが埋まると WAL の書き出しで panic して起動できなくなるので、容量でも古いデータを消す
        - --storage.tsdb.retention.size=4GB
        ports:
        - containerPort: 9090
          name: http
        volumeMounts:
        - name: data
          mountPath: /prometheus
        - name: config
          mountPath: /etc/prometheus
      volumes:
      - name: config
        configMap:
          name: furport-monitor-prometheus
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: furport-monitor-prometheus
spec:
  selector:
    app: furport-monitor-prometheus
  ports:
  - port: 9090
    targetPort: 9090
