k8s/furport-monitor/jaeger.yaml
apiVersion: v1
kind: Service
metadata:
  name: furport-monitor-otlp
spec:
  selector:
    app: furport-monitor-jaeger
  ports:
  - port: 4318
    targetPort: 4318
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: furport-monitor-otlp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: furport-otlp.lapi.tokyo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: furport-monitor-otlp
            port:
              number: 4318
  tls:  
  - hosts:
    - furport-otlp.lapi.tokyo
    secretName: furport-monitor-otlp-tls
---
apiVersion: v1
kind: Service
metadata:
  name: furport-monitor-jaeger
spec:
  selector:
    app: furport-monitor-jaeger
  ports:
  - port: 16686
    targetPort: 16686
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: furport-monitor-jaeger
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: furport-jaeger.lapi.tokyo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: furport-monitor-jaeger
            port:
              number: 16686
  tls:  
  - hosts:
    - furport-jaeger.lapi.tokyo
    secretName: furport-monitor-jaeger-tls
